--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt-contrib-imagemin": "^2.0.1",
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-uglify": "^3.3.0",
-    "grunt-contrib-watch": "^1.0.1"
+    "grunt-contrib-watch": "^1.0.1",
+    "grunt-php": "^1.5.1"
   }
 }
